# EMCPP-UJ

./: .gitignore  README.md
1/: CMakeLists.txt  Dockerfile  matrix.h  matrix_test.cpp
2/lab2/: CMakeLists.txt  DynamicContainer.h  Ex1_StaticContainer.cpp  Ex3_DynamicContainer.cpp  Ex4_String.cpp  MyString.cpp  MyString.h  StaticContainer.h  StaticContainer2.h  String.cpp  String.h
3/: Printer.cpp  function_pointers03.cpp  lambda_expressions.cpp
4/: ex_4_1_templates.cpp  ex_4_2_compare.cpp  ex_4_3_selectIf.cpp
5/: ex1_Pair.cpp  ex2_staticVector.cpp  ex3_dynamicVector.cpp  ex4_conversion.cpp
5/solutions/: dynamicVector.h  dynamicVector.tcc  staticVector.h  staticVector.tcc
6/: ex1_variadicFunctions.cpp  ex2_proxy.cpp  ex3_Mixins.cpp  ex4_MultiVector.cpp
